update layout baru

--- a/pemrogamanweb/tugas1/login/index.html
+++ b/pemrogamanweb/tugas1/login/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,22 @@
     <title>login page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <script>alert('Silahkan masukkan username dan password');
-    </script>
-    <center><div class="divform">
-        <form>
-            <label for="username">Username:</label><br>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="pass">password:</label><br>
-            <input type="text" id="lname" name="pass">
-        </form>
-    </div></center>
+    <div class="layout">
+        <div class="content_left">
+            <h1>Login</h1>
+            <form>
+                <input type="text" name="fname" placeholder="username">
+                <input type="password" name="pass" placeholder="password">
+                <button>Login</button>
+            </form>
+        </div>
+        <div class="content_right">
+            <h2>Selamat datang</h2>
+            <p>form login ini dibuat dengan penuh effort</p>
+        </div>
+    </div>
 </body>
+
 </html>
